history 조회시, updateAt 수정하여 정렬해 반환 keyword response 형식 변경