@@ -15,6 +15,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.client.RestTemplate;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -29,14 +30,14 @@ public class KeywordService {
     private final String aiServerUrl = "http://52.78.34.56:8002/graph";
     private final String aiServerUrlWhenClickNode = "http://52.78.34.56:8004/summarize";
 
-    public List<List<Keyword>> requestToAIServer(String text) {
+    public List<Keyword> requestToAIServer(String text) {
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
 
         Map<String, Object> body = new HashMap<>();
         body.put("root", text);
         body.put("top1", 10); // 10개 요청
-        body.put("top2", 3);
+        body.put("top2", 3);  // 각 subKeyword의 하위 키워드 3개
 
         HttpEntity<Map<String, Object>> requestEntity = new HttpEntity<>(body, headers);
 
@@ -49,25 +50,17 @@ public class KeywordService {
 
             JsonNode root = response.getBody().get("keyword_tree");
             if (root == null || !root.has("children")) {
-                throw new IllegalStateException("keyword_tree 또는 children가 존재하지 않음");
+                throw new IllegalArgumentException("AI 서버 응답에 'keyword_tree' 또는 'children'이 없습니다.");
             }
 
-            JsonNode childrenArray = root.get("children");
-
-            List<Keyword> fullList = StreamSupport.stream(childrenArray.spliterator(), false)
-                    .map(GraphResponseMapper::toKeyword) // 이거 새로 만들어야 해
-                    .toList();
-
-            return List.of(
-                    fullList.subList(0, 5),
-                    fullList.subList(5, 10)
-            );
+            return GraphResponseMapper.splitRootIntoKeywords(root);
 
         } catch (Exception e) {
-            //return List.of(mockDataInjection(messages)); // fallback
-            return null;
+            e.printStackTrace(); // 로그 기록 (실 서비스에서는 로그로 처리 권장)
+            return Collections.emptyList(); // fallback: 빈 리스트 반환
         }
     }
+
 
     //Todo node 클릭시, AI 서버에 요청하는 method. 현재는 root node만 요청함. list로 요청 가능하도록 수정 필요.
     public Keyword requestToAIServerWhenClickNode(List<String> messages) {
